Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-6768

Crash in modelmanager when loading lots of .qmlprojects

    XMLWordPrintable

Details

    • b43dade44d60e5c6a631c5d8880afeffcd9094f4

    Description

      WHen loading lots of .qmlproject files at once, e.g. by running

      ~/dev/qt/qt-5/qtdeclarative$ find . -name "*.qmlproject" | xargs ~/dev/creator-2.5-32/bin/qtcreator
      

      I get a crash:

      ASSERT: "d->ref == 1" in file /home/kkoehne/dev/qt/qt-4.8/src/corelib/tools/qlist.cpp, line 233
      

      Stacktrace:

      Program terminated with signal 6, Aborted.
      #0  0x0055f0c2 in ?? () from /lib/ld-linux.so.2
      (gdb) bt
      #0  0x0055f0c2 in ?? () from /lib/ld-linux.so.2
      #1  0x001eec8f in __GI_raise (sig=6)
          at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
      #2  0x001f22b5 in __GI_abort () at abort.c:92
      #3  0x00764f0b in qt_message_output (msgType=QtFatalMsg, 
          buf=0xa66ac30 "ASSERT: \"d->ref == 1\" in file /home/kkoehne/dev/qt/qt-4.8/src/corelib/tools/qlist.cpp, line 233")
          at /home/kkoehne/dev/qt/qt-4.8/src/corelib/global/qglobal.cpp:2252
      #4  0x007650ad in qt_message (msgType=QtFatalMsg, 
          msg=0x907e5c "ASSERT: \"%s\" in file %s, line %d", 
          ap=0xbfc2c6c4 "X\267\220")
          at /home/kkoehne/dev/qt/qt-4.8/src/corelib/global/qglobal.cpp:2298
      #5  0x00765432 in qFatal (msg=0x907e5c "ASSERT: \"%s\" in file %s, line %d")
          at /home/kkoehne/dev/qt/qt-4.8/src/corelib/global/qglobal.cpp:2481
      #6  0x00764ab0 in qt_assert (assertion=0x90b758 "d->ref == 1", 
          file=0x90b720 "/home/kkoehne/dev/qt/qt-4.8/src/corelib/tools/qlist.cpp", 
          line=233)
          at /home/kkoehne/dev/qt/qt-4.8/src/corelib/global/qglobal.cpp:1999
      #7  0x0079555b in QListData::append (this=0x905af18, n=1)
          at /home/kkoehne/dev/qt/qt-4.8/src/corelib/tools/qlist.cpp:233
      #8  0x00795673 in QListData::append (this=0x905af18)
          at /home/kkoehne/dev/qt/qt-4.8/src/corelib/tools/qlist.cpp:253
      #9  0x0446b244 in QList<QString>::append (this=0x905af18, t=...)
          at ../../../../qt/qt-4.8-32/include/QtCore/../../../qt-4.8/src/corelib/tools/qlist.h:530
      #10 0x0446d0ae in QList<QString>::operator+= (this=0x905af18, t=...)
          at ../../../../qt/qt-4.8-32/include/QtCore/../../../qt-4.8/src/corelib/tools/qlist.h:332
      #11 0x04468a57 in QmlJSTools::Internal::ModelManager::updateImportPaths (this=
          0x905aef0)
          at ../../../../creator-2.5/src/plugins/qmljstools/qmljsmodelmanager.cpp:685
      #12 0x04466291 in QmlJSTools::Internal::ModelManager::updateProjectInfo (
          this=0x905aef0, pinfo=...)
          at ../../../../creator-2.5/src/plugins/qmljstools/qmljsmodelmanager.cpp:336
      #13 0x044d6438 in QmlProjectManager::QmlProject::refresh (this=0xa2ed7b8, 
          options=...)
          at ../../../../creator-2.5/src/plugins/qmlprojectmanager/qmlproject.cpp:172
      #14 0x044d6e83 in QmlProjectManager::QmlProject::fromMap (this=0xa2ed7b8, 
          map=...)
          at ../../../../creator-2.5/src/plugins/qmlprojectmanager/qmlproject.cpp:312
      #15 0x064b9212 in ProjectExplorer::Project::restoreSettings (this=0xa2ed7b8)
          at ../../../../creator-2.5/src/plugins/projectexplorer/project.cpp:237
      #16 0x06441175 in ProjectExplorer::ProjectExplorerPlugin::openProjects (this=
          0x8e00710, fileNames=..., errorString=0x0)
          at ../../../../creator-2.5/src/plugins/projectexplorer/projectexplorer.cpp:1302
      #17 0x06440e2c in ProjectExplorer::ProjectExplorerPlugin::openProject (
          this=0x8e00710, fileName=..., errorString=0x0)
          at ../../../../creator-2.5/src/plugins/projectexplorer/projectexplorer.cpp:1273
      #18 0x064baa28 in ProjectExplorer::Internal::ProjectFileFactory::open (this=
          0x94fc060, fileName=...)
          at ../../../../creator-2.5/src/plugins/projectexplorer/pluginfilefactory.cpp:81
      #19 0x0292b791 in Core::Internal::MainWindow::openFiles (this=0x8d29610, 
          fileNames=..., flags=3)
          at ../../../../creator-2.5/src/plugins/coreplugin/mainwindow.cpp:874
      #20 0x029aeb46 in Core::Internal::CoreImpl::openFiles (this=0x8d3b510, 
          arguments=..., flags=3)
          at ../../../../creator-2.5/src/plugins/coreplugin/coreimpl.cpp:235
      #21 0x064420b4 in ProjectExplorer::ProjectExplorerPlugin::restoreSession (
          this=0x8e00710)
          at ../../../../creator-2.5/src/plugins/projectexplorer/projectexplorer.cpp:1465
      #22 0x06563dd0 in ProjectExplorer::ProjectExplorerPlugin::qt_static_metacall (
          _o=0x8e00710, _c=QMetaObject::InvokeMetaMethod, _id=40, _a=0xbfc2cce0)
          at .moc/debug-shared/moc_projectexplorer.cpp:258
      #23 0x008a9c1d in QMetaObject::activate (sender=0x8d3b510, m=0x2ada124, 
          local_signal_index=1, argv=0x0)
          at /home/kkoehne/dev/qt/qt-4.8/src/corelib/kernel/qobject.cpp:3547
      #24 0x02a18563 in Core::ICore::coreOpened (this=0x8d3b510)
          at .moc/debug-shared/moc_icore.cpp:123
      #25 0x02926530 in Core::Internal::MainWindow::extensionsInitialized (
          this=0x8d29610)
          at ../../../../creator-2.5/src/plugins/coreplugin/mainwindow.cpp:370
      #26 0x029a94a7 in Core::Internal::CorePlugin::extensionsInitialized (this=
          0x8d3a4c0)
          at ../../../../creator-2.5/src/plugins/coreplugin/coreplugin.cpp:105
      #27 0x00f68629 in ExtensionSystem::Internal::PluginSpecPrivate::initializeExtensions (this=0x8d284a8)
          at ../../../../creator-2.5/src/libs/extensionsystem/pluginspec.cpp:1011
      #28 0x00f5e1d0 in ExtensionSystem::Internal::PluginManagerPrivate::loadPlugin (
          this=0x8d239b8, spec=0x8d26b10, 
          destState=ExtensionSystem::PluginSpec::Running)
          at ../../../../creator-2.5/src/libs/extensionsystem/pluginmanager.cpp:1052
      #29 0x00f5d4af in ExtensionSystem::Internal::PluginManagerPrivate::loadPlugins
          (this=0x8d239b8)
          at ../../../../creator-2.5/src/libs/extensionsystem/pluginmanager.cpp:944
      #30 0x00f5a704 in ExtensionSystem::PluginManager::loadPlugins (this=0xbfc2cf58)
          at ../../../../creator-2.5/src/libs/extensionsystem/pluginmanager.cpp:328
      #31 0x08050a2c in main (argc=102, argv=0xbfc2d274)
          at ../../../creator-2.5/src/app/main.cpp:373
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            fawzi Fawzi Mohamed
            kkohne Kai Köhne
            Votes:
            1 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes