qmljs: fix racing condition with importPaths

fixes QTCREATORBUG-6768

Change-Id: I53646df69aa9d0ce97006c68826b02a1452fe4d9
Reviewed-by: Kai Koehne <kai.koehne@nokia.com>